refactor: V1 对话服务拆分为 V2 Forest 架构，清理全局死代码
## 架构重构

### ConversationService 从 1960 行拆为 5 个类（sivan-web）
- ConversationService（Facade，~400 行）：编排协调 + 流式入口
- ConversationCrudService：对话 CRUD + 所有权校验
- MessageCrudService：消息 CRUD + 响应映射
- ConversationCompressionService：压缩逻辑 + mutable state
- PromptContextService：上下文构建 + 工具解析 + 文件操作

### V1 → V2 执行引擎完全迁移
- 删除 MultiAgentOrchestrator + TaskDecomposer + SubTask + PhaseManager 等 7 个文件
- 删除 TaskComplexityAnalyzer（TreeMatcher 直接决定 mode）
- streamMessage / regenerateMessage 统一走 ForestExecutor 链
- TreeMatcher 支持 5 种 mode（SEQUENTIAL/PARALLEL/CONDITIONAL/HIERARCHICAL/CONSENSUS）
- SEQUENTIAL 上下文透传（accumulatedContext 步骤间传递）
- ForestCompressor 接入执行前压缩

### A2A Agent 通信
- AgentLeafExecutor 注入 AgentMessageBus + send_agent_message 工具
- forest_agent_messages 表持久化 A2A 消息

### RAG 工具化
- 删除 buildRagContext() 强制调用，改为 kb_search 工具按需搜索
- 减少不必要的 embedding 调用和 token 消耗

## 全局清理

### @Transactional 清理（31 个文件排查）
- 保留多写操作：deleteBatch、saveTree、setDefault、deleteDocument
- 移除单写操作和响应式方法上的冗余注解

### 死代码删除
- SendMessageRequest 的 mode / forceIntent 字段（后端 + 前端同步清除）
- McpToolEntity / McpToolJpaRepository / McpToolRepositoryAdapter（MCP 纯内存索引）
- ToolMatchLog / IToolMatchLogRepository（语义匹配降级路径）
- SseSanitizer / SectionPhase / ProgressState / buildFinalContent 等残留代码
- 删除前端的 forceIntent 发送逻辑

### Flyway
- V11__drop_mcp_tools.sql：删除 mcp_tools 表
- V12__drop_tool_match_logs.sql：删除 tool_match_logs 表

### 文档
- 19-编排模式V2.md 合并到 01-森林架构-编排与执行.md
- 09-持久化与恢复.md §4.4 更新为两段式事务边界

## Bug 修复

- Epoch 分段缓存失效：buildEpochContext 改为返回 ContextResult
- forest_nodes.metadata 膨胀：prebuiltMessages 不落库
- 消息持久化线程问题：doFinally 加 publishOn(boundedElastic)
- MCP 工具选择未持久化：onMcpServersChange 调 api.put()
- 项目知识库勾选丢失：update:groupKbNames 直接调 saveGroupSettings
- 沙箱网络配置无效：allow-network → 跳过 sandbox-exec
- MCP 客户端超时从 60s 提高到 120s
- tool_usage 表工具调用记录接入
- forest_execution_logs 执行日志入库
- forest_agent_messages JPA 实体 columnDefinition 修正